# wave-cryptography

./: .gitignore  CMakeLists.txt  README.md  main.c  run_cmake.bat  theo.txt
AudioFiles/: BabyElephantWalk60.wav.bak
WaveCrypt/: WaveCrypt.cbp  WaveCrypt.depend  WaveCrypt.layout  chacha.c  chacha.h  encoder.c  encoder.h  headerLogic.c  headerLogic.h  headerStruct.h  hiddenDataHeaderStruct.h  hiddenFile.h  hiddenHeader.c  hiddenHeader.h  hiddenHeaderStruct.c  hiddenHeaderStruct.h  main.c  main.c.save-failed  menuGUI.h  wavHeader.c  wavHeader.h  wavHeaderStruct.h  wave.h
include/: chacha.h  constants.h  containerHeader.h  encoder.h  hiddenHeader.h  menuGUI.h  messageHeader.h  util.h  wavHeader.h
src/: chacha.c  containerHeader.c  encoder.c  hiddenHeader.c  menuGUI.c  messageHeader.c  util.c  wavHeader.c
